Added Search functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
         <h1>Real Estate Management</h1>
         <div class="auth-buttons">
             <a href="{{ url_for('home') }}">Home</a>
+            <a href="{{ url_for('search') }}">Search</a>
             <a href="{{ url_for('login') }}">Login</a>
             <a href="{{ url_for('register') }}">Register</a>
             <a onclick="showChatbot()">Chatbot</a>
