--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
             <h1>Login</h1>
             <form method="POST" onsubmit="return validateForm()">
                 <label>Email:</label>
-                <input type="email" id="email" name="email" required>
+                <input type="text" id="email" name="email" required>
                 <small id="email-error" class="error-message"></small>
 
                 <label>Password:</label>
