--- a/templates/register.html
+++ b/templates/register.html
@@ -23,7 +23,7 @@
             <label>Name:</label>
             <input type="text" name="name" required>
             <label>Email:</label>
-            <input type="email" name="email" id="email" required>
+            <input type="text" name="email" id="email" required>
             <small id="email-error" class="error-message"></small>
             <label>Password:</label>
             <input type="password" name="password" id="password" required>
