--- a/templates/index.html
+++ b/templates/index.html
@@ -187,7 +187,7 @@
         })
         .then(response => response.json())
         .then(data => {
-            document.getElementById("price-response").innerText = "Predicted Price: ₹" + data.Predicted_Price.toFixed(2) + " k";
+            document.getElementById("price-response").innerText = "Predicted Price: ₹" + data.Predicted_Price.toFixed(2);
         });
     }
 
